Agregar tarifas por tiempo y estilo rojo
